test/types/file/freadNoInt.good
freadNoInt.chpl:4: error: uncaught error - bad format: malformed number in channel.read(ref a:int(64)) with path "freadNoInt.txt" offset 0
